testsuite/tests/rename/should_compile/T12127.hs
module T12127 where

import T12127a( T(..), C(..) )
