testsuite/tests/rename/should_fail/T25056b.hs
module T25056b (T, T_(..)) where

import T25056a (T, T_(..))
